src/css/structure/modules/infragistics.ui.grid.css
/* ... */
.touch .ui-iggrid-expandbutton,
.touchevents .ui-iggrid-expandbutton,
.pointerevents .ui-iggrid-expandbutton
{
margin:1em 20%;
}
.touch .ui-iggrid tbody td.ui-iggrid-childarea,
.touchevents .ui-iggrid tbody td.ui-iggrid-childarea,
.pointerevents .ui-iggrid tbody td.ui-iggrid-childarea
{
	padding-left: 34px;
}

.ui-iggrid-featurechooser-list-submenu {
    padding: 4px;
    overflow: hidden;
    font-size: 14px;
    line-height: 26px;
    background-color: #fff;
    background-image: none;
    /* Added to make a consistent look and feel among all Jquery themes */
    min-width: 60px;
    color: #333;
    font-weight: normal;
    border: none;
}

.ui-iggrid-featurechooser-list-submenu li.ui-state-default,
.ui-iggrid-featurechooser-list-submenu li.ui-state-hover
 {
    background: transparent none;
    color:#333;
    border:none;
    text-shadow:none;
    padding:5px;
}

.ui-iggrid-featurechooser-list-submenu li.ui-state-hover {
    background:#eee;
}

